--- a/CommitTrackerDispatcher/Framework/GetInputData.xaml
+++ b/CommitTrackerDispatcher/Framework/GetInputData.xaml
@@ -9,7 +9,7 @@
   <sap:VirtualizedContainerService.HintSize>1235,2116</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>GetInputData_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
-    <scg:List x:TypeArguments="x:String" Capacity="32">
+    <scg:List x:TypeArguments="x:String" Capacity="35">
       <x:String>System.Activities</x:String>
       <x:String>System.Activities.Statements</x:String>
       <x:String>System.Activities.Expressions</x:String>
@@ -42,10 +42,13 @@
       <x:String>UiPath.Shared.Activities</x:String>
       <x:String>UiPath.Excel.Activities</x:String>
       <x:String>UiPath.Shared.Activities.Business</x:String>
+      <x:String>UiPath.DataTableUtilities</x:String>
+      <x:String>System.Reflection</x:String>
+      <x:String>System.Runtime.InteropServices</x:String>
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
-    <scg:List x:TypeArguments="AssemblyReference" Capacity="31">
+    <scg:List x:TypeArguments="AssemblyReference" Capacity="32">
       <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -77,6 +80,7 @@
       <AssemblyReference>UiPath.OCR.Activities</AssemblyReference>
       <AssemblyReference>UiPath.Web.Activities</AssemblyReference>
       <AssemblyReference>UiPath.UIAutomationNext.Activities</AssemblyReference>
+      <AssemblyReference>System.Reflection.Metadata</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="GetInputData" sap:VirtualizedContainerService.HintSize="1245,2011" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -157,7 +161,7 @@
                             <ui:ExcelGetWorkbookSheet DisplayName="Get name of first worksheet" sap:VirtualizedContainerService.HintSize="975,22" sap2010:WorkflowViewState.IdRef="ExcelGetWorkbookSheet_2" Index="0" Sheet="[sheetName]" />
                             <If Condition="[out_RawInputData Is Nothing]" DisplayName="If first file" sap:VirtualizedContainerService.HintSize="975,468" sap2010:WorkflowViewState.IdRef="If_2">
                               <If.Then>
-                                <ueab:ReadRangeX DisplayName="Read data in worksheet" sap:VirtualizedContainerService.HintSize="444,167" sap2010:WorkflowViewState.IdRef="ReadRangeX_2" Range="[inputData.Sheet(sheetName).Range(&quot;A:F&quot;)]" SaveTo="[out_RawInputData]" />
+                                <ueab:ReadRangeX DisplayName="Read data in worksheet" sap:VirtualizedContainerService.HintSize="444,167" sap2010:WorkflowViewState.IdRef="ReadRangeX_2" Range="[inputData.Sheet(sheetName).Range(&quot;&quot;)]" SaveTo="[out_RawInputData]" />
                               </If.Then>
                               <If.Else>
                                 <Sequence sap:VirtualizedContainerService.HintSize="486,321" sap2010:WorkflowViewState.IdRef="Sequence_7">
@@ -166,7 +170,7 @@
                                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                     </scg:Dictionary>
                                   </sap:WorkflowViewStateService.ViewState>
-                                  <ueab:ReadRangeX DisplayName="Read data in worksheet" sap:VirtualizedContainerService.HintSize="444,167" sap2010:WorkflowViewState.IdRef="ReadRangeX_3" Range="[inputData.Sheet(sheetName).Range(&quot;A:F&quot;)]" SaveTo="[appendInputData]" />
+                                  <ueab:ReadRangeX DisplayName="Read data in worksheet" sap:VirtualizedContainerService.HintSize="444,167" sap2010:WorkflowViewState.IdRef="ReadRangeX_3" Range="[inputData.Sheet(sheetName).Range(&quot;&quot;)]" SaveTo="[appendInputData]" />
                                   <ui:MergeDataTable Destination="[out_RawInputData]" DisplayName="Merge Data Table" sap:VirtualizedContainerService.HintSize="444,22" sap2010:WorkflowViewState.IdRef="MergeDataTable_1" MissingSchemaAction="Ignore" Source="[appendInputData]" />
                                 </Sequence>
                               </If.Else>
